[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "io-std",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
